Meta3/y.output
Terminals unused in grammar

    RESERVED
    INTEGER


Grammar

    0 $accept: program $end

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE

    2 DeclList: DeclList MethodDecl
    3         | DeclList FieldDecl
    4         | DeclList SEMICOLON
    5         | ε

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON
    8          | error SEMICOLON

    9 IdentList: IdentList COMMA IDENTIFIER
   10          | IDENTIFIER

   11 IdentListVar: IdentListVar COMMA IDENTIFIER
   12             | IDENTIFIER

   13 Type: BOOL
   14     | INT
   15     | DOUBLE

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | VOID IDENTIFIER LPAR FormalParamOpt RPAR

   18 FormalParamOpt: FormalParams
   19               | ε

   20 FormalParams: NormalParams
   21             | STRING LSQ RSQ IDENTIFIER

   22 NormalParams: Type IDENTIFIER
   23             | NormalParams COMMA Type IDENTIFIER

   24 MethodBody: LBRACE StmtOrVarList RBRACE

   25 StmtOrVarList: StmtOrVarList Statement
   26              | StmtOrVarList VarDecl
   27              | ε

   28 VarDecl: Type IdentListVar SEMICOLON

   29 Statement: LBRACE StmtList RBRACE
   30          | IfStmt
   31          | SEMICOLON
   32          | WHILE LPAR Expr RPAR Statement
   33          | RETURN ExprOpt SEMICOLON
   34          | ExprStmt SEMICOLON
   35          | PRINT LPAR Expr RPAR SEMICOLON
   36          | PRINT LPAR STRLIT RPAR SEMICOLON
   37          | error SEMICOLON

   38 StmtList: StmtList Statement
   39         | ε

   40 IfStmt: IF LPAR Expr RPAR Statement ELSE Statement
   41       | IF LPAR Expr RPAR Statement

   42 ExprOpt: Expr
   43        | ε

   44 ExprStmt: IDENTIFIER LPAR ArgListOpt RPAR
   45         | IDENTIFIER LPAR error RPAR
   46         | IDENTIFIER ASSIGN Expr
   47         | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR

   48 Expr: AssignExpr
   49     | LPAR error RPAR

   50 AssignExpr: IDENTIFIER ASSIGN AssignExpr
   51           | OrExpr

   52 OrExpr: OrExpr OR AndExpr
   53       | AndExpr

   54 AndExpr: AndExpr AND XorExpr
   55        | XorExpr

   56 XorExpr: XorExpr XOR EqExpr
   57        | EqExpr

   58 EqExpr: EqExpr EQ RelExpr
   59       | EqExpr NE RelExpr
   60       | RelExpr

   61 RelExpr: RelExpr LT ShiftExpr
   62        | RelExpr LE ShiftExpr
   63        | RelExpr GT ShiftExpr
   64        | RelExpr GE ShiftExpr
   65        | ShiftExpr

   66 ShiftExpr: ShiftExpr LSHIFT AddExpr
   67          | ShiftExpr RSHIFT AddExpr
   68          | AddExpr

   69 AddExpr: AddExpr PLUS MulExpr
   70        | AddExpr MINUS MulExpr
   71        | MulExpr

   72 MulExpr: MulExpr STAR UnaryExpr
   73        | MulExpr DIV UnaryExpr
   74        | MulExpr MOD UnaryExpr
   75        | UnaryExpr

   76 UnaryExpr: MINUS UnaryExpr
   77          | NOT UnaryExpr
   78          | PLUS UnaryExpr
   79          | PostfixExpr

   80 PostfixExpr: IDENTIFIER DOTLENGTH
   81            | IDENTIFIER LPAR ArgListOpt RPAR
   82            | IDENTIFIER LPAR error RPAR
   83            | PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | PARSEINT LPAR error RPAR
   85            | LPAR Expr RPAR
   86            | IDENTIFIER
   87            | NATURAL
   88            | DECIMAL
   89            | BOOLLIT

   90 ArgListOpt: ArgList
   91           | ε

   92 ArgList: Expr
   93        | ArgList COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 37 45 49 82 84
    CLASS (258) 1
    LBRACE (259) 1 24 29
    RBRACE (260) 1 24 29
    PUBLIC (261) 6 7
    STATIC (262) 6 7
    SEMICOLON (263) 4 7 8 28 31 33 34 35 36 37
    COMMA (264) 9 11 23 93
    BOOL (265) 13
    INT (266) 14
    VOID (267) 17
    STRING (268) 21
    LPAR (269) 16 17 32 35 36 40 41 44 45 47 49 81 82 83 84 85
    RPAR (270) 16 17 32 35 36 40 41 44 45 47 49 81 82 83 84 85
    LSQ (271) 21 47 83
    RSQ (272) 21 47 83
    IF (273) 40 41
    ELSE (274) 40
    WHILE (275) 32
    RETURN (276) 33
    PRINT (277) 35 36
    PARSEINT (278) 47 83 84
    DOTLENGTH (279) 80
    ASSIGN (280) 46 50
    OR (281) 52
    AND (282) 54
    EQ (283) 58
    NE (284) 59
    LT (285) 61
    LE (286) 62
    GT (287) 63
    GE (288) 64
    LSHIFT (289) 66
    RSHIFT (290) 67
    PLUS (291) 69 78
    MINUS (292) 70 76
    STAR (293) 72
    DIV (294) 73
    MOD (295) 74
    NOT (296) 77
    RESERVED (297)
    IDENTIFIER <lexeme> (298) 1 9 10 11 12 16 17 21 22 23 44 45 46 47 50 80 81 82 83 86
    NATURAL <lexeme> (299) 87
    DECIMAL <lexeme> (300) 88
    INTEGER <lexeme> (301)
    DOUBLE <lexeme> (302) 15
    STRLIT <lexeme> (303) 36
    BOOLLIT <lexeme> (304) 89
    XOR <lexeme> (305) 56
    WITHOUT_ELSE (306)


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    program <node> (53)
        on left: 1
        on right: 0
    DeclList <node> (54)
        on left: 2 3 4 5
        on right: 1 2 3 4
    MethodDecl <node> (55)
        on left: 6
        on right: 2
    FieldDecl <node> (56)
        on left: 7 8
        on right: 3
    IdentList <node> (57)
        on left: 9 10
        on right: 7 9
    IdentListVar <node> (58)
        on left: 11 12
        on right: 11 28
    Type <node> (59)
        on left: 13 14 15
        on right: 7 16 22 23 28
    MethodHeader <node> (60)
        on left: 16 17
        on right: 6
    FormalParamOpt <node> (61)
        on left: 18 19
        on right: 16 17
    FormalParams <node> (62)
        on left: 20 21
        on right: 18
    NormalParams <node> (63)
        on left: 22 23
        on right: 20 23
    MethodBody <node> (64)
        on left: 24
        on right: 6
    StmtOrVarList <node> (65)
        on left: 25 26 27
        on right: 24 25 26
    VarDecl <node> (66)
        on left: 28
        on right: 26
    Statement <node> (67)
        on left: 29 30 31 32 33 34 35 36 37
        on right: 25 32 38 40 41
    StmtList <node> (68)
        on left: 38 39
        on right: 29 38
    IfStmt <node> (69)
        on left: 40 41
        on right: 30
    ExprOpt <node> (70)
        on left: 42 43
        on right: 33
    ExprStmt <node> (71)
        on left: 44 45 46 47
        on right: 34
    Expr <node> (72)
        on left: 48 49
        on right: 32 35 40 41 42 46 47 83 85 92 93
    AssignExpr <node> (73)
        on left: 50 51
        on right: 48 50
    OrExpr <node> (74)
        on left: 52 53
        on right: 51 52
    AndExpr <node> (75)
        on left: 54 55
        on right: 52 53 54
    XorExpr <node> (76)
        on left: 56 57
        on right: 54 55 56
    EqExpr <node> (77)
        on left: 58 59 60
        on right: 56 57 58 59
    RelExpr <node> (78)
        on left: 61 62 63 64 65
        on right: 58 59 60 61 62 63 64
    ShiftExpr <node> (79)
        on left: 66 67 68
        on right: 61 62 63 64 65 66 67
    AddExpr <node> (80)
        on left: 69 70 71
        on right: 66 67 68 69 70
    MulExpr <node> (81)
        on left: 72 73 74 75
        on right: 69 70 71 72 73 74
    UnaryExpr <node> (82)
        on left: 76 77 78 79
        on right: 72 73 74 75 76 77 78
    PostfixExpr <node> (83)
        on left: 80 81 82 83 84 85 86 87 88 89
        on right: 79
    ArgListOpt <node> (84)
        on left: 90 91
        on right: 44 81
    ArgList <node> (85)
        on left: 92 93
        on right: 90 93


State 0

    0 $accept: • program $end
    1 program: • CLASS IDENTIFIER LBRACE DeclList RBRACE

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS • IDENTIFIER LBRACE DeclList RBRACE

    IDENTIFIER  shift, and go to state 3


State 2

    0 $accept: program • $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS IDENTIFIER • LBRACE DeclList RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: program $end •

    $default  accept


State 5

    1 program: CLASS IDENTIFIER LBRACE • DeclList RBRACE
    2 DeclList: • DeclList MethodDecl
    3         | • DeclList FieldDecl
    4         | • DeclList SEMICOLON
    5         | ε •

    $default  reduce using rule 5 (DeclList)

    DeclList  go to state 6


State 6

    1 program: CLASS IDENTIFIER LBRACE DeclList • RBRACE
    2 DeclList: DeclList • MethodDecl
    3         | DeclList • FieldDecl
    4         | DeclList • SEMICOLON
    6 MethodDecl: • PUBLIC STATIC MethodHeader MethodBody
    7 FieldDecl: • PUBLIC STATIC Type IdentList SEMICOLON
    8          | • error SEMICOLON

    error      shift, and go to state 7
    RBRACE     shift, and go to state 8
    PUBLIC     shift, and go to state 9
    SEMICOLON  shift, and go to state 10

    MethodDecl  go to state 11
    FieldDecl   go to state 12


State 7

    8 FieldDecl: error • SEMICOLON

    SEMICOLON  shift, and go to state 13


State 8

    1 program: CLASS IDENTIFIER LBRACE DeclList RBRACE •

    $default  reduce using rule 1 (program)


State 9

    6 MethodDecl: PUBLIC • STATIC MethodHeader MethodBody
    7 FieldDecl: PUBLIC • STATIC Type IdentList SEMICOLON

    STATIC  shift, and go to state 14


State 10

    4 DeclList: DeclList SEMICOLON •

    $default  reduce using rule 4 (DeclList)


State 11

    2 DeclList: DeclList MethodDecl •

    $default  reduce using rule 2 (DeclList)


State 12

    3 DeclList: DeclList FieldDecl •

    $default  reduce using rule 3 (DeclList)


State 13

    8 FieldDecl: error SEMICOLON •

    $default  reduce using rule 8 (FieldDecl)


State 14

    6 MethodDecl: PUBLIC STATIC • MethodHeader MethodBody
    7 FieldDecl: PUBLIC STATIC • Type IdentList SEMICOLON
   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: • Type IDENTIFIER LPAR FormalParamOpt RPAR
   17             | • VOID IDENTIFIER LPAR FormalParamOpt RPAR

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    VOID    shift, and go to state 17
    DOUBLE  shift, and go to state 18

    Type          go to state 19
    MethodHeader  go to state 20


State 15

   13 Type: BOOL •

    $default  reduce using rule 13 (Type)


State 16

   14 Type: INT •

    $default  reduce using rule 14 (Type)


State 17

   17 MethodHeader: VOID • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 21


State 18

   15 Type: DOUBLE •

    $default  reduce using rule 15 (Type)


State 19

    7 FieldDecl: PUBLIC STATIC Type • IdentList SEMICOLON
    9 IdentList: • IdentList COMMA IDENTIFIER
   10          | • IDENTIFIER
   16 MethodHeader: Type • IDENTIFIER LPAR FormalParamOpt RPAR

    IDENTIFIER  shift, and go to state 22

    IdentList  go to state 23


State 20

    6 MethodDecl: PUBLIC STATIC MethodHeader • MethodBody
   24 MethodBody: • LBRACE StmtOrVarList RBRACE

    LBRACE  shift, and go to state 24

    MethodBody  go to state 25


State 21

   17 MethodHeader: VOID IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 26


State 22

   10 IdentList: IDENTIFIER •  [SEMICOLON, COMMA]
   16 MethodHeader: Type IDENTIFIER • LPAR FormalParamOpt RPAR

    LPAR  shift, and go to state 27

    $default  reduce using rule 10 (IdentList)


State 23

    7 FieldDecl: PUBLIC STATIC Type IdentList • SEMICOLON
    9 IdentList: IdentList • COMMA IDENTIFIER

    SEMICOLON  shift, and go to state 28
    COMMA      shift, and go to state 29


State 24

   24 MethodBody: LBRACE • StmtOrVarList RBRACE
   25 StmtOrVarList: • StmtOrVarList Statement
   26              | • StmtOrVarList VarDecl
   27              | ε •

    $default  reduce using rule 27 (StmtOrVarList)

    StmtOrVarList  go to state 30


State 25

    6 MethodDecl: PUBLIC STATIC MethodHeader MethodBody •

    $default  reduce using rule 6 (MethodDecl)


State 26

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   17 MethodHeader: VOID IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • NormalParams
   21             | • STRING LSQ RSQ IDENTIFIER
   22 NormalParams: • Type IDENTIFIER
   23             | • NormalParams COMMA Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 33
    FormalParams    go to state 34
    NormalParams    go to state 35


State 27

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   16 MethodHeader: Type IDENTIFIER LPAR • FormalParamOpt RPAR
   18 FormalParamOpt: • FormalParams
   19               | ε •  [RPAR]
   20 FormalParams: • NormalParams
   21             | • STRING LSQ RSQ IDENTIFIER
   22 NormalParams: • Type IDENTIFIER
   23             | • NormalParams COMMA Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 31
    DOUBLE  shift, and go to state 18

    $default  reduce using rule 19 (FormalParamOpt)

    Type            go to state 32
    FormalParamOpt  go to state 36
    FormalParams    go to state 34
    NormalParams    go to state 35


State 28

    7 FieldDecl: PUBLIC STATIC Type IdentList SEMICOLON •

    $default  reduce using rule 7 (FieldDecl)


State 29

    9 IdentList: IdentList COMMA • IDENTIFIER

    IDENTIFIER  shift, and go to state 37


State 30

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   24 MethodBody: LBRACE StmtOrVarList • RBRACE
   25 StmtOrVarList: StmtOrVarList • Statement
   26              | StmtOrVarList • VarDecl
   28 VarDecl: • Type IdentListVar SEMICOLON
   29 Statement: • LBRACE StmtList RBRACE
   30          | • IfStmt
   31          | • SEMICOLON
   32          | • WHILE LPAR Expr RPAR Statement
   33          | • RETURN ExprOpt SEMICOLON
   34          | • ExprStmt SEMICOLON
   35          | • PRINT LPAR Expr RPAR SEMICOLON
   36          | • PRINT LPAR STRLIT RPAR SEMICOLON
   37          | • error SEMICOLON
   40 IfStmt: • IF LPAR Expr RPAR Statement ELSE Statement
   41       | • IF LPAR Expr RPAR Statement
   44 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   45         | • IDENTIFIER LPAR error RPAR
   46         | • IDENTIFIER ASSIGN Expr
   47         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 40
    SEMICOLON   shift, and go to state 41
    BOOL        shift, and go to state 15
    INT         shift, and go to state 16
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47
    DOUBLE      shift, and go to state 18

    Type       go to state 48
    VarDecl    go to state 49
    Statement  go to state 50
    IfStmt     go to state 51
    ExprStmt   go to state 52


State 31

   21 FormalParams: STRING • LSQ RSQ IDENTIFIER

    LSQ  shift, and go to state 53


State 32

   22 NormalParams: Type • IDENTIFIER

    IDENTIFIER  shift, and go to state 54


State 33

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 55


State 34

   18 FormalParamOpt: FormalParams •

    $default  reduce using rule 18 (FormalParamOpt)


State 35

   20 FormalParams: NormalParams •  [RPAR]
   23 NormalParams: NormalParams • COMMA Type IDENTIFIER

    COMMA  shift, and go to state 56

    $default  reduce using rule 20 (FormalParams)


State 36

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt • RPAR

    RPAR  shift, and go to state 57


State 37

    9 IdentList: IdentList COMMA IDENTIFIER •

    $default  reduce using rule 9 (IdentList)


State 38

   37 Statement: error • SEMICOLON

    SEMICOLON  shift, and go to state 58


State 39

   29 Statement: LBRACE • StmtList RBRACE
   38 StmtList: • StmtList Statement
   39         | ε •

    $default  reduce using rule 39 (StmtList)

    StmtList  go to state 59


State 40

   24 MethodBody: LBRACE StmtOrVarList RBRACE •

    $default  reduce using rule 24 (MethodBody)


State 41

   31 Statement: SEMICOLON •

    $default  reduce using rule 31 (Statement)


State 42

   40 IfStmt: IF • LPAR Expr RPAR Statement ELSE Statement
   41       | IF • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 60


State 43

   32 Statement: WHILE • LPAR Expr RPAR Statement

    LPAR  shift, and go to state 61


State 44

   33 Statement: RETURN • ExprOpt SEMICOLON
   42 ExprOpt: • Expr
   43        | ε •  [SEMICOLON]
   48 Expr: • AssignExpr
   49     | • LPAR error RPAR
   50 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   51           | • OrExpr
   52 OrExpr: • OrExpr OR AndExpr
   53       | • AndExpr
   54 AndExpr: • AndExpr AND XorExpr
   55        | • XorExpr
   56 XorExpr: • XorExpr XOR EqExpr
   57        | • EqExpr
   58 EqExpr: • EqExpr EQ RelExpr
   59       | • EqExpr NE RelExpr
   60       | • RelExpr
   61 RelExpr: • RelExpr LT ShiftExpr
   62        | • RelExpr LE ShiftExpr
   63        | • RelExpr GT ShiftExpr
   64        | • RelExpr GE ShiftExpr
   65        | • ShiftExpr
   66 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   67          | • ShiftExpr RSHIFT AddExpr
   68          | • AddExpr
   69 AddExpr: • AddExpr PLUS MulExpr
   70        | • AddExpr MINUS MulExpr
   71        | • MulExpr
   72 MulExpr: • MulExpr STAR UnaryExpr
   73        | • MulExpr DIV UnaryExpr
   74        | • MulExpr MOD UnaryExpr
   75        | • UnaryExpr
   76 UnaryExpr: • MINUS UnaryExpr
   77          | • NOT UnaryExpr
   78          | • PLUS UnaryExpr
   79          | • PostfixExpr
   80 PostfixExpr: • IDENTIFIER DOTLENGTH
   81            | • IDENTIFIER LPAR ArgListOpt RPAR
   82            | • IDENTIFIER LPAR error RPAR
   83            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | • PARSEINT LPAR error RPAR
   85            | • LPAR Expr RPAR
   86            | • IDENTIFIER
   87            | • NATURAL
   88            | • DECIMAL
   89            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    PLUS        shift, and go to state 64
    MINUS       shift, and go to state 65
    NOT         shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
    NATURAL     shift, and go to state 68
    DECIMAL     shift, and go to state 69
    BOOLLIT     shift, and go to state 70

    $default  reduce using rule 43 (ExprOpt)

    ExprOpt      go to state 71
    Expr         go to state 72
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 45

   35 Statement: PRINT • LPAR Expr RPAR SEMICOLON
   36          | PRINT • LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 84


State 46

   47 ExprStmt: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR

    LPAR  shift, and go to state 85


State 47

   44 ExprStmt: IDENTIFIER • LPAR ArgListOpt RPAR
   45         | IDENTIFIER • LPAR error RPAR
   46         | IDENTIFIER • ASSIGN Expr

    LPAR    shift, and go to state 86
    ASSIGN  shift, and go to state 87


State 48

   11 IdentListVar: • IdentListVar COMMA IDENTIFIER
   12             | • IDENTIFIER
   28 VarDecl: Type • IdentListVar SEMICOLON

    IDENTIFIER  shift, and go to state 88

    IdentListVar  go to state 89


State 49

   26 StmtOrVarList: StmtOrVarList VarDecl •

    $default  reduce using rule 26 (StmtOrVarList)


State 50

   25 StmtOrVarList: StmtOrVarList Statement •

    $default  reduce using rule 25 (StmtOrVarList)


State 51

   30 Statement: IfStmt •

    $default  reduce using rule 30 (Statement)


State 52

   34 Statement: ExprStmt • SEMICOLON

    SEMICOLON  shift, and go to state 90


State 53

   21 FormalParams: STRING LSQ • RSQ IDENTIFIER

    RSQ  shift, and go to state 91


State 54

   22 NormalParams: Type IDENTIFIER •

    $default  reduce using rule 22 (NormalParams)


State 55

   17 MethodHeader: VOID IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 17 (MethodHeader)


State 56

   13 Type: • BOOL
   14     | • INT
   15     | • DOUBLE
   23 NormalParams: NormalParams COMMA • Type IDENTIFIER

    BOOL    shift, and go to state 15
    INT     shift, and go to state 16
    DOUBLE  shift, and go to state 18

    Type  go to state 92


State 57

   16 MethodHeader: Type IDENTIFIER LPAR FormalParamOpt RPAR •

    $default  reduce using rule 16 (MethodHeader)


State 58

   37 Statement: error SEMICOLON •

    $default  reduce using rule 37 (Statement)


State 59

   29 Statement: • LBRACE StmtList RBRACE
   29          | LBRACE StmtList • RBRACE
   30          | • IfStmt
   31          | • SEMICOLON
   32          | • WHILE LPAR Expr RPAR Statement
   33          | • RETURN ExprOpt SEMICOLON
   34          | • ExprStmt SEMICOLON
   35          | • PRINT LPAR Expr RPAR SEMICOLON
   36          | • PRINT LPAR STRLIT RPAR SEMICOLON
   37          | • error SEMICOLON
   38 StmtList: StmtList • Statement
   40 IfStmt: • IF LPAR Expr RPAR Statement ELSE Statement
   41       | • IF LPAR Expr RPAR Statement
   44 ExprStmt: • IDENTIFIER LPAR ArgListOpt RPAR
   45         | • IDENTIFIER LPAR error RPAR
   46         | • IDENTIFIER ASSIGN Expr
   47         | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR

    error       shift, and go to state 38
    LBRACE      shift, and go to state 39
    RBRACE      shift, and go to state 93
    SEMICOLON   shift, and go to state 41
    IF          shift, and go to state 42
    WHILE       shift, and go to state 43
    RETURN      shift, and go to state 44
    PRINT       shift, and go to state 45
    PARSEINT    shift, and go to state 46
    IDENTIFIER  shift, and go to state 47

    Statement  go to state 94
    IfStmt     go to state 51
    ExprStmt   go to state 52


State 60

   40 IfStmt: IF LPAR • Expr RPAR Statement ELSE Statement
   41       | IF LPAR • Expr RPAR Statement
   48 Expr: • AssignExpr
   49     | • LPAR error RPAR
   50 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   51           | • OrExpr
   52 OrExpr: • OrExpr OR AndExpr
   53       | • AndExpr
   54 AndExpr: • AndExpr AND XorExpr
   55        | • XorExpr
   56 XorExpr: • XorExpr XOR EqExpr
   57        | • EqExpr
   58 EqExpr: • EqExpr EQ RelExpr
   59       | • EqExpr NE RelExpr
   60       | • RelExpr
   61 RelExpr: • RelExpr LT ShiftExpr
   62        | • RelExpr LE ShiftExpr
   63        | • RelExpr GT ShiftExpr
   64        | • RelExpr GE ShiftExpr
   65        | • ShiftExpr
   66 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   67          | • ShiftExpr RSHIFT AddExpr
   68          | • AddExpr
   69 AddExpr: • AddExpr PLUS MulExpr
   70        | • AddExpr MINUS MulExpr
   71        | • MulExpr
   72 MulExpr: • MulExpr STAR UnaryExpr
   73        | • MulExpr DIV UnaryExpr
   74        | • MulExpr MOD UnaryExpr
   75        | • UnaryExpr
   76 UnaryExpr: • MINUS UnaryExpr
   77          | • NOT UnaryExpr
   78          | • PLUS UnaryExpr
   79          | • PostfixExpr
   80 PostfixExpr: • IDENTIFIER DOTLENGTH
   81            | • IDENTIFIER LPAR ArgListOpt RPAR
   82            | • IDENTIFIER LPAR error RPAR
   83            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | • PARSEINT LPAR error RPAR
   85            | • LPAR Expr RPAR
   86            | • IDENTIFIER
   87            | • NATURAL
   88            | • DECIMAL
   89            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    PLUS        shift, and go to state 64
    MINUS       shift, and go to state 65
    NOT         shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
    NATURAL     shift, and go to state 68
    DECIMAL     shift, and go to state 69
    BOOLLIT     shift, and go to state 70

    Expr         go to state 95
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 61

   32 Statement: WHILE LPAR • Expr RPAR Statement
   48 Expr: • AssignExpr
   49     | • LPAR error RPAR
   50 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   51           | • OrExpr
   52 OrExpr: • OrExpr OR AndExpr
   53       | • AndExpr
   54 AndExpr: • AndExpr AND XorExpr
   55        | • XorExpr
   56 XorExpr: • XorExpr XOR EqExpr
   57        | • EqExpr
   58 EqExpr: • EqExpr EQ RelExpr
   59       | • EqExpr NE RelExpr
   60       | • RelExpr
   61 RelExpr: • RelExpr LT ShiftExpr
   62        | • RelExpr LE ShiftExpr
   63        | • RelExpr GT ShiftExpr
   64        | • RelExpr GE ShiftExpr
   65        | • ShiftExpr
   66 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   67          | • ShiftExpr RSHIFT AddExpr
   68          | • AddExpr
   69 AddExpr: • AddExpr PLUS MulExpr
   70        | • AddExpr MINUS MulExpr
   71        | • MulExpr
   72 MulExpr: • MulExpr STAR UnaryExpr
   73        | • MulExpr DIV UnaryExpr
   74        | • MulExpr MOD UnaryExpr
   75        | • UnaryExpr
   76 UnaryExpr: • MINUS UnaryExpr
   77          | • NOT UnaryExpr
   78          | • PLUS UnaryExpr
   79          | • PostfixExpr
   80 PostfixExpr: • IDENTIFIER DOTLENGTH
   81            | • IDENTIFIER LPAR ArgListOpt RPAR
   82            | • IDENTIFIER LPAR error RPAR
   83            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | • PARSEINT LPAR error RPAR
   85            | • LPAR Expr RPAR
   86            | • IDENTIFIER
   87            | • NATURAL
   88            | • DECIMAL
   89            | • BOOLLIT

    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    PLUS        shift, and go to state 64
    MINUS       shift, and go to state 65
    NOT         shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
    NATURAL     shift, and go to state 68
    DECIMAL     shift, and go to state 69
    BOOLLIT     shift, and go to state 70

    Expr         go to state 96
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 62

   48 Expr: • AssignExpr
   49     | • LPAR error RPAR
   49     | LPAR • error RPAR
   50 AssignExpr: • IDENTIFIER ASSIGN AssignExpr
   51           | • OrExpr
   52 OrExpr: • OrExpr OR AndExpr
   53       | • AndExpr
   54 AndExpr: • AndExpr AND XorExpr
   55        | • XorExpr
   56 XorExpr: • XorExpr XOR EqExpr
   57        | • EqExpr
   58 EqExpr: • EqExpr EQ RelExpr
   59       | • EqExpr NE RelExpr
   60       | • RelExpr
   61 RelExpr: • RelExpr LT ShiftExpr
   62        | • RelExpr LE ShiftExpr
   63        | • RelExpr GT ShiftExpr
   64        | • RelExpr GE ShiftExpr
   65        | • ShiftExpr
   66 ShiftExpr: • ShiftExpr LSHIFT AddExpr
   67          | • ShiftExpr RSHIFT AddExpr
   68          | • AddExpr
   69 AddExpr: • AddExpr PLUS MulExpr
   70        | • AddExpr MINUS MulExpr
   71        | • MulExpr
   72 MulExpr: • MulExpr STAR UnaryExpr
   73        | • MulExpr DIV UnaryExpr
   74        | • MulExpr MOD UnaryExpr
   75        | • UnaryExpr
   76 UnaryExpr: • MINUS UnaryExpr
   77          | • NOT UnaryExpr
   78          | • PLUS UnaryExpr
   79          | • PostfixExpr
   80 PostfixExpr: • IDENTIFIER DOTLENGTH
   81            | • IDENTIFIER LPAR ArgListOpt RPAR
   82            | • IDENTIFIER LPAR error RPAR
   83            | • PARSEINT LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | • PARSEINT LPAR error RPAR
   85            | • LPAR Expr RPAR
   85            | LPAR • Expr RPAR
   86            | • IDENTIFIER
   87            | • NATURAL
   88            | • DECIMAL
   89            | • BOOLLIT

    error       shift, and go to state 97
    LPAR        shift, and go to state 62
    PARSEINT    shift, and go to state 63
    PLUS        shift, and go to state 64
    MINUS       shift, and go to state 65
    NOT         shift, and go to state 66
    IDENTIFIER  shift, and go to state 67
    NATURAL     shift, and go to state 68
    DECIMAL     shift, and go to state 69
    BOOLLIT     shift, and go to state 70

    Expr         go to state 98
    AssignExpr   go to state 73
    OrExpr       go to state 74
    AndExpr      go to state 75
    XorExpr      go to state 76
    EqExpr       go to state 77
    RelExpr      go to state 78
    ShiftExpr    go to state 79
    AddExpr      go to state 80
    MulExpr      go to state 81
    UnaryExpr    go to state 82
    PostfixExpr  go to state 83


State 63

   83 PostfixExpr: PARSEINT • LPAR IDENTIFIER LSQ Expr RSQ RPAR
   84            | PARSEINT • LPAR error RPAR

    LPAR  shift, and go to state 99


State 64
